deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      containers:
        - name: mysite
          image: harryjdh/mysite:3
          ports:
            - containerPort: 8000
