service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite-svc
spec:
  type: ClusterIP
  selector:
    app: mysite
  ports:
    - port: 8000
      targetPort: 8000
